@@ -8,6 +8,8 @@ from sql import Query, Expression
 
 from .field import Field, SQLType
 from ...protocols.jsonrpc import JSONDecoder, JSONEncoder
+from ...pool import Pool
+from ...tools import grouped_slice
 
 
 class Dict(Field):
@@ -42,3 +44,50 @@ class Dict(Field):
 
     def sql_type(self):
         return SQLType('TEXT', 'TEXT')
+
+    def translated(self, name=None, type_='values'):
+        "Return a descriptor for the translated value of the field"
+        if name is None:
+            name = self.name
+        if name is None:
+            raise ValueError('Missing name argument')
+        return TranslatedDict(name, type_)
+
+
+class TranslatedDict(object):
+    'A descriptor for translated values of Dict field'
+
+    def __init__(self, name, type_):
+        assert type_ in ['keys', 'values']
+        self.name = name
+        self.type_ = type_
+
+    def __get__(self, inst, cls):
+        if inst is None:
+            return self
+        pool = Pool()
+        schema_model = getattr(cls, self.name).schema_model
+        SchemaModel = pool.get(schema_model)
+
+        value = getattr(inst, self.name)
+        if not value:
+            return value
+
+        domain = []
+        if self.type_ == 'values':
+            domain = [('type_', '=', 'selection')]
+
+        records = []
+        for key_names in grouped_slice(value.keys()):
+            records += SchemaModel.search([
+                    ('name', 'in', key_names),
+                    ] + domain)
+        keys = SchemaModel.get_keys(records)
+
+        if self.type_ == 'keys':
+            return {k['name']: k['string'] for k in keys}
+
+        elif self.type_ == 'values':
+            trans = {k['name']: dict(k['selection']) for k in keys}
+            return {k: v if k not in trans else trans[k].get(v, v)
+                for k, v in value.iteritems()}
