@@ -102,6 +102,7 @@ class FieldsTestCase(unittest.TestCase):
         self.selection_required = POOL.get('test.selection_required')
 
         self.dict_ = POOL.get('test.dict')
+        self.dict_schema = POOL.get('test.dict.schema')
         self.dict_default = POOL.get('test.dict_default')
         self.dict_required = POOL.get('test.dict_required')
 
@@ -3108,6 +3109,23 @@ class FieldsTestCase(unittest.TestCase):
         'Test Dict'
         with Transaction().start(DB_NAME, USER,
                 context=CONTEXT) as transaction:
+
+            self.dict_schema.create([{
+                        'name': 'a',
+                        'string': 'A',
+                        'type_': 'integer',
+                        }, {
+                        'name': 'b',
+                        'string': 'B',
+                        'type_': 'integer',
+                        }, {
+                        'name': 'type',
+                        'string': 'Type',
+                        'type_': 'selection',
+                        'selection': ('arabic: Arabic\n'
+                            'hexa: Hexadecimal'),
+                        }])
+
             dict1, = self.dict_.create([{
                         'dico': {'a': 1, 'b': 2},
                         }])
@@ -3115,6 +3133,21 @@ class FieldsTestCase(unittest.TestCase):
 
             self.dict_.write([dict1], {'dico': {'z': 26}})
             self.assert_(dict1.dico == {'z': 26})
+
+            dict1.dico = {
+                'a': 1,
+                'type': 'arabic',
+                }
+            dict1.save()
+            self.assertEqual(dict1.dico, {'a': 1, 'type': 'arabic'})
+            self.assertEqual(dict1.dico_string, {
+                    'a': 1,
+                    'type': 'Arabic',
+                    })
+            self.assertEqual(dict1.dico_string_keys, {
+                    'a': 'A',
+                    'type': 'Type',
+                    })
 
             dict2, = self.dict_.create([{}])
             self.assert_(dict2.dico is None)
